create page offers(special offers). added section offer. Correcting header menu links indents.

--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -55,6 +55,7 @@
   // --color-black-opacity-60: #00000066;
   // --color-black-opacity-40: #00000099;
   --color-red: #ba1414;
+  --color-red-opcity-40: rgba(59, 6, 5, 0.4);
   --color-green: #139128;
   --color-green-light: #31ba49;
   --color-blue-extra-dark: #243746;
