--- a/styles/pages/offers/offers.scss
+++ b/styles/pages/offers/offers.scss
@@ -11,11 +11,6 @@
 @use "../../blocks/сommon-blocks/section";
 //blocks
 @use "../../blocks/header/_header.scss";
-@use "../../blocks/promo/_promo-corporate-page.scss";
 @use "../../blocks/page-heading/_page-heading.scss";
-@use "../../blocks/possobilities/_possobilities.scss";
-@use "../../blocks/callback/_callback.scss";
-@use "../../blocks/our-clients/_our-clients.scss";
-@use "../../blocks/advantages/_our-advantages.scss";
-@use "../../blocks/other-services/_other-services.scss";
+@use "../../blocks/offers/_offers.scss";
 @use "../../blocks/footer/_footer.scss";
