--- a/styles/blocks/header/_header-menu.scss
+++ b/styles/blocks/header/_header-menu.scss
@@ -2,6 +2,7 @@
 /* BLock header-menu .part of header*/
 
 .header-menu {
+  width: 100%;
   &--not-to-scroll {
     /* Временно , заменить на display none , через JS */
     animation-name: hidden-to-scroll;
@@ -14,11 +15,11 @@
   }
 
   &__list {
-    @include flex-space-between;
+    @include flex-center;
     @include fluid-text(18, 15);
-
     flex-wrap: wrap;
-    gap: rem(10);
+    column-gap: fluid(40, 10);
+    row-gap: rem(10);
     padding-block: rem(13.5);
     font-weight: 700;
     line-height: 1.3;
@@ -30,8 +31,6 @@
   .header-menu {
     &__list {
       max-width: rem(960);
-      justify-content: center;
-      gap: rem(17);
     }
   }
 }
