--- a/styles/blocks/header/header.css
+++ b/styles/blocks/header/header.css
@@ -32,6 +32,9 @@
   }
 }
 /* BLock header-menu .part of header*/
+.header-menu {
+  width: 100%;
+}
 .header-menu--not-to-scroll {
   /* Временно , заменить на display none , через JS */
   animation-name: hidden-to-scroll;
@@ -44,11 +47,12 @@
 }
 .header-menu__list {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   font-size: clamp(0.9375rem, 0.8502906977rem + 0.3488372093vw, 1.125rem);
   flex-wrap: wrap;
-  gap: 0.625rem;
+  column-gap: clamp(0.625rem, -0.2470930233rem + 3.488372093vw, 2.5rem);
+  row-gap: 0.625rem;
   padding-block: 0.84375rem;
   font-weight: 700;
   line-height: 1.3;
@@ -58,8 +62,6 @@
 @media (max-width: 1370px) {
   .header-menu__list {
     max-width: 60rem;
-    justify-content: center;
-    gap: 1.0625rem;
   }
 }
 @media (width <= 63.99875rem) {
