--- a/styles/pages/addresses-card-page/addresses-card.css
+++ b/styles/pages/addresses-card-page/addresses-card.css
@@ -181,6 +181,7 @@ svg * {
   --color-white-opacity-35: #ffffffa8;
   --color-black-opacity-80: #00000033;
   --color-red: #ba1414;
+  --color-red-opcity-40: rgba(59, 6, 5, 0.4);
   --color-green: #139128;
   --color-green-light: #31ba49;
   --color-blue-extra-dark: #243746;
@@ -634,6 +635,9 @@ button[aria-label]::before {
   }
 }
 /* BLock header-menu .part of header*/
+.header-menu {
+  width: 100%;
+}
 .header-menu--not-to-scroll {
   /* Временно , заменить на display none , через JS */
   animation-name: hidden-to-scroll;
@@ -646,11 +650,12 @@ button[aria-label]::before {
 }
 .header-menu__list {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   font-size: clamp(0.9375rem, 0.8502906977rem + 0.3488372093vw, 1.125rem);
   flex-wrap: wrap;
-  gap: 0.625rem;
+  column-gap: clamp(0.625rem, -0.2470930233rem + 3.488372093vw, 2.5rem);
+  row-gap: 0.625rem;
   padding-block: 0.84375rem;
   font-weight: 700;
   line-height: 1.3;
@@ -660,8 +665,6 @@ button[aria-label]::before {
 @media (max-width: 1370px) {
   .header-menu__list {
     max-width: 60rem;
-    justify-content: center;
-    gap: 1.0625rem;
   }
 }
 @media (width <= 63.99875rem) {
@@ -1287,6 +1290,21 @@ button[aria-label]::before {
   cursor: pointer;
   text-decoration: underline;
   text-decoration-skip-ink: none;
+}
+@media (any-hover: hover) {
+  .svc-contacts__item-text--underline:hover {
+    filter: opacity(0.6);
+  }
+}
+@media (any-hover: hover) and (any-hover: none) {
+  .svc-contacts__item-text--underline:active {
+    filter: opacity(0.6);
+  }
+}
+.svc-contacts__item-text--underline:active {
+  filter: opacity(0.4);
+  will-change: transform;
+  scale: 0.98;
 }
 
 @media (width <= 47.99875rem) {
