create page offer. added section single-offer.

--- a/styles/blocks/page-heading/page-heading.css
+++ b/styles/blocks/page-heading/page-heading.css
@@ -49,6 +49,7 @@
   }
   .page-heading__breadcrumbs-link {
     line-height: 1.4;
+    letter-spacing: 0.03em;
   }
 }
 /*  ===================================  */
