--- a/styles/pages/corporate/corporate.css
+++ b/styles/pages/corporate/corporate.css
@@ -654,9 +654,9 @@ button[aria-label]::before {
   align-items: center;
   font-size: clamp(0.9375rem, 0.8502906977rem + 0.3488372093vw, 1.125rem);
   flex-wrap: wrap;
-  column-gap: clamp(0.625rem, -0.2470930233rem + 3.488372093vw, 2.5rem);
-  row-gap: 0.625rem;
-  padding-block: 0.84375rem;
+  column-gap: clamp(1rem, 0.3023255814rem + 2.7906976744vw, 2.5rem);
+  row-gap: 1.0625rem;
+  padding-block: 0.96875rem;
   font-weight: 700;
   line-height: 1.3;
   text-transform: uppercase;
@@ -680,7 +680,7 @@ button[aria-label]::before {
   }
   .header-menu__list {
     padding-block: 0.9375rem;
-    padding-inline: 0.4375rem;
+    padding-inline: 0.625rem;
   }
 }
 /* BLock header-top-menu */
@@ -1056,6 +1056,7 @@ button[aria-label]::before {
   }
   .page-heading__breadcrumbs-link {
     line-height: 1.4;
+    letter-spacing: 0.03em;
   }
 }
 /*  ===================================  */
