--- a/styles/blocks/сommon-blocks/_button.scss
+++ b/styles/blocks/сommon-blocks/_button.scss
@@ -79,5 +79,11 @@
     }
   }
 }
+@include mobile-medium-media {
+  .button {
+    width: 100%;
+  }
+}
+
 /*  ===================================  */
 /*  ===================================  */
