--- a/styles/blocks/header/_header-menu.scss
+++ b/styles/blocks/header/_header-menu.scss
@@ -15,19 +15,25 @@
   }
 
   &__list {
-    @include flex-center;
+    @include flex-space-between;
     @include fluid-text(18, 15);
     flex-wrap: wrap;
     column-gap: fluid(40, 16);
     row-gap: rem(17);
-    padding-block: rem(15.5);
+    padding-block: rem(13.5);
     font-weight: 700;
     line-height: 1.3;
     text-transform: uppercase;
   }
 }
-
-@media (max-width: 1370px) {
+@media (width <= rem(1460.98)) {
+  .header-menu {
+    &__list {
+      justify-content: center;
+    }
+  }
+}
+@media (width <= rem(1370.98)) {
   .header-menu {
     &__list {
       max-width: rem(960);
