--- a/styles/blocks/header/header.css
+++ b/styles/blocks/header/header.css
@@ -15,10 +15,10 @@
   line-height: 1.3;
 }
 .call-up__text {
-  font-size: 1rem;
+  font-size: 0.875rem;
   line-height: 1;
   font-weight: 400;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.07em;
   text-align: center;
   color: var(--text-color-medium);
 }
@@ -47,19 +47,24 @@
 }
 .header-menu__list {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   font-size: clamp(0.9375rem, 0.8502906977rem + 0.3488372093vw, 1.125rem);
   flex-wrap: wrap;
   column-gap: clamp(1rem, 0.3023255814rem + 2.7906976744vw, 2.5rem);
   row-gap: 1.0625rem;
-  padding-block: 0.96875rem;
+  padding-block: 0.84375rem;
   font-weight: 700;
   line-height: 1.3;
   text-transform: uppercase;
 }
 
-@media (max-width: 1370px) {
+@media (width <= 91.31125rem) {
+  .header-menu__list {
+    justify-content: center;
+  }
+}
+@media (width <= 85.68625rem) {
   .header-menu__list {
     max-width: 60rem;
   }
@@ -235,6 +240,9 @@
   align-items: center;
   justify-content: end;
   column-gap: 3.6875rem;
+}
+.header__button {
+  letter-spacing: 0.03em;
 }
 
 @media (width > 63.99875rem) {
