--- a/styles/blocks/header/header.scss
+++ b/styles/blocks/header/header.scss
@@ -46,6 +46,10 @@
     justify-content: end;
     column-gap: rem(59);
   }
+
+  &__button {
+    letter-spacing: 0.03em;
+  }
 }
 @include tablet-media-above {
   .header {
