--- a/styles/blocks/our-clients/our-clients.css
+++ b/styles/blocks/our-clients/our-clients.css
@@ -7,12 +7,16 @@
   --clientsSlideHeight: 7.1875rem;
   min-height: calc(var(--clientsSlideHeight) + 0.125rem);
 }
+.our-clients__slide {
+  width: var(--clientsSlideWidth);
+  height: var(--clientsSlideHeight);
+}
 .our-clients__link {
   display: block;
   position: relative;
   overflow: hidden;
-  width: var(--clientsSlideWidth);
-  height: var(--clientsSlideHeight);
+  width: 100%;
+  height: 100%;
   outline: var(--border-extra-light);
   background-color: var(--color-light);
   border-radius: var(--border-radius-small);
