--- a/styles/healpers/_media.scss
+++ b/styles/healpers/_media.scss
@@ -4,6 +4,7 @@ $desktop: 1600.98;
 $laptop: 1300.98;
 $tablet: 1023.98;
 $mobile: 767.98;
+$mobile-medium: 574.98;
 $mobile-s: 480.98;
 
 @mixin desktop-media {
@@ -23,6 +24,11 @@ $mobile-s: 480.98;
 }
 @mixin mobile-media {
   @media (width <= rem($mobile)) {
+    @content;
+  }
+}
+@mixin mobile-medium-media {
+  @media (width <= rem($mobile-medium)) {
     @content;
   }
 }
@@ -49,6 +55,11 @@ $mobile-s: 480.98;
 }
 @mixin mobile-media-above {
   @media (width > rem($mobile)) {
+    @content;
+  }
+}
+@mixin mobile-medium-media-above {
+  @media (width > rem($mobile-medium)) {
     @content;
   }
 }
