--- a/styles/pages/corporate/corporate.css
+++ b/styles/pages/corporate/corporate.css
@@ -194,7 +194,7 @@ svg * {
   --text-color-light: var(--color-gray-50);
   --text-color-dark: var(--color-gray-900);
   --text-color-dark-secondary: var(--color-gray-700);
-  --text-color-medium: var(--color-gray-600);
+  --text-color-medium: var(--color-gray-500);
   --color-accent-extra-light: var(--color-accent-50);
   --color-accent: var(--color-accent-500);
   --color-error: var(--color-red);
@@ -223,7 +223,7 @@ svg * {
   --section-margin-y-big-to-medium: clamp(3.75rem, 2.0058139535rem + 6.976744186vw, 7.5rem);
   --section-margin-y-big-to-small: clamp(2.5rem, 0.1744186047rem + 9.3023255814vw, 7.5rem);
   --button-height-small: 2.125rem;
-  --button-height: 2.625rem;
+  --button-height: 2.75rem;
   --button-height-big: 2.875rem;
   --transition-duration: 0.3s;
 }
@@ -373,8 +373,8 @@ h5,
   font-size: clamp(1.0625rem, 0.9752906977rem + 0.3488372093vw, 1.25rem);
 }
 
-h5,
-.h5 {
+h6,
+.h6 {
   font-size: clamp(0.9375rem, 0.8502906977rem + 0.3488372093vw, 1.125rem);
 }
 
@@ -530,6 +530,11 @@ button[aria-label]::before {
     padding: 0.3125rem 0.6875rem;
   }
 }
+@media (width <= 35.93625rem) {
+  .button {
+    width: 100%;
+  }
+}
 /*  ===================================  */
 /*  ===================================  */
 /* Styles for common block logo */
@@ -618,10 +623,10 @@ button[aria-label]::before {
   line-height: 1.3;
 }
 .call-up__text {
-  font-size: 1rem;
+  font-size: 0.875rem;
   line-height: 1;
   font-weight: 400;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.07em;
   text-align: center;
   color: var(--text-color-medium);
 }
@@ -650,19 +655,24 @@ button[aria-label]::before {
 }
 .header-menu__list {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   font-size: clamp(0.9375rem, 0.8502906977rem + 0.3488372093vw, 1.125rem);
   flex-wrap: wrap;
   column-gap: clamp(1rem, 0.3023255814rem + 2.7906976744vw, 2.5rem);
   row-gap: 1.0625rem;
-  padding-block: 0.96875rem;
+  padding-block: 0.84375rem;
   font-weight: 700;
   line-height: 1.3;
   text-transform: uppercase;
 }
 
-@media (max-width: 1370px) {
+@media (width <= 91.31125rem) {
+  .header-menu__list {
+    justify-content: center;
+  }
+}
+@media (width <= 85.68625rem) {
   .header-menu__list {
     max-width: 60rem;
   }
@@ -839,6 +849,9 @@ button[aria-label]::before {
   justify-content: end;
   column-gap: 3.6875rem;
 }
+.header__button {
+  letter-spacing: 0.03em;
+}
 
 @media (width > 63.99875rem) {
   .header__general--not-to-scroll {
@@ -901,6 +914,62 @@ button[aria-label]::before {
 }
 /*  ===================================  */
 /*  =============END header============  */
+/*  ===================================  */
+/* Section page-heading */
+.page-heading {
+  --breadcrumbsColor: var(--color-gray-500);
+  --breadcrumbsGap: clamp(1.75rem, 1.1104651163rem + 2.5581395349vw, 3.125rem);
+  padding-block: 1.5rem 2.9375rem;
+  color: var(--breadcrumbsColor);
+}
+.page-heading__breadcrumbs {
+  margin-bottom: 1.125rem;
+}
+.page-heading__breadcrumbs-list {
+  display: flex;
+  align-items: center;
+  column-gap: var(--breadcrumbsGap);
+}
+.page-heading__breadcrumbs-item {
+  position: relative;
+}
+.page-heading__breadcrumbs-item:not(:last-child)::after {
+  position: absolute;
+  content: "−";
+  right: calc(var(--breadcrumbsGap) / 2 * -1 - 0.3125rem);
+  top: 0.06em;
+}
+.page-heading__breadcrumbs-item:last-child a {
+  opacity: 0.7;
+  pointer-events: none;
+}
+.page-heading__breadcrumbs-link {
+  font-size: clamp(0.9375rem, 0.8502906977rem + 0.3488372093vw, 1.125rem);
+  color: currentColor;
+  line-height: 1.5;
+}
+.page-heading__page-name {
+  color: var(--color-dark);
+}
+.page-heading__page-name--small-mobile {
+  font-size: clamp(1.25rem, 0.9011627907rem + 1.3953488372vw, 2rem);
+  line-height: 1.5;
+}
+
+@media (width <= 63.99875rem) {
+  .page-heading {
+    padding-block: 1.25rem 2.5rem;
+  }
+  .page-heading__breadcrumbs {
+    margin-bottom: 0.625rem;
+  }
+  .page-heading__breadcrumbs-link {
+    line-height: 1.4;
+    letter-spacing: 0.03em;
+  }
+}
+/*  ===================================  */
+/*  ==========END page-heading=========  */
 /*  ===================================  */
 /* Section promo in the corporate page */
 .promo {
@@ -1006,76 +1075,22 @@ button[aria-label]::before {
 /*  ========================================  */
 /*  =====END promo block(corporate page)====  */
 /*  ========================================  */
-/* Section page-heading */
-.page-heading {
-  --breadcrumbsColor: var(--color-gray-500);
-  --breadcrumbsGap: clamp(1.75rem, 1.1104651163rem + 2.5581395349vw, 3.125rem);
-  padding-block: 1.5rem 2.9375rem;
-  color: var(--breadcrumbsColor);
-}
-.page-heading__breadcrumbs {
-  margin-bottom: 1.125rem;
-}
-.page-heading__breadcrumbs-list {
-  display: flex;
-  align-items: center;
-  column-gap: var(--breadcrumbsGap);
-}
-.page-heading__breadcrumbs-item {
-  position: relative;
-}
-.page-heading__breadcrumbs-item:not(:last-child)::after {
-  position: absolute;
-  content: "−";
-  right: calc(var(--breadcrumbsGap) / 2 * -1 - 0.3125rem);
-  top: 0.06em;
-}
-.page-heading__breadcrumbs-item:last-child a {
-  opacity: 0.7;
-  pointer-events: none;
-}
-.page-heading__breadcrumbs-link {
-  font-size: clamp(0.9375rem, 0.8502906977rem + 0.3488372093vw, 1.125rem);
-  color: currentColor;
-  line-height: 1.5;
-}
-.page-heading__page-name {
-  color: var(--color-dark);
-}
-.page-heading__page-name--small-mobile {
-  font-size: clamp(1.25rem, 0.9011627907rem + 1.3953488372vw, 2rem);
-  line-height: 1.5;
-}
-
-@media (width <= 63.99875rem) {
-  .page-heading {
-    padding-block: 1.25rem 2.5rem;
-  }
-  .page-heading__breadcrumbs {
-    margin-bottom: 0.625rem;
-  }
-  .page-heading__breadcrumbs-link {
-    line-height: 1.4;
-    letter-spacing: 0.03em;
-  }
-}
-/*  ===================================  */
-/*  ==========END page-heading=========  */
-/*  ===================================  */
 /* Styles for section possobility-card. Part of section possobilities */
 .possobility-card {
-  min-height: 18.375rem;
   max-width: 18.5625rem;
   width: 100%;
-  padding: 1.25rem 1.25rem 0.5rem 1.25rem;
+  height: auto !important;
+  padding: 1.25rem 1.25rem 0 1.25rem;
   outline: var(--border-light);
   border-radius: var(--border-radius-small);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: end;
   row-gap: 1.25rem;
   background-color: var(--color-accent-axtra-light);
+}
+.possobility-card--small-indent {
+  row-gap: 0.625rem;
 }
 .possobility-card__image {
   width: 3.75rem;
@@ -1087,35 +1102,49 @@ button[aria-label]::before {
   text-align: center;
   min-height: 3.625rem;
 }
-@media (width <= 63.99875rem) {
-  .possobility-card__name {
-    min-height: 2.75rem;
-    line-height: 1.2;
-  }
-}
 .possobility-card__text {
   line-height: 1.5;
   color: var(--text-color-dark-secondary);
   flex-grow: 1;
+  margin-block: 0 0.5rem;
+}
+.possobility-card__text--static-font-size {
+  font-size: 1.125rem;
+}
+.possobility-card__list {
+  padding-block: 0 0.1875rem;
 }
 
 @media (width <= 63.99875rem) {
   .possobility-card {
-    min-height: 17.5rem;
+    min-height: 17.0625rem;
+  }
+  .possobility-card--big-width-mobile {
+    max-width: 20rem;
   }
   .possobility-card__name {
     min-height: 2.75rem;
     line-height: 1.2;
   }
+  .possobility-card__name--small-height-mobile {
+    min-height: 1.25rem;
+  }
 }
 /* Styles for section possobilities. */
 .possobilities {
-  padding-block: 0.125rem;
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  overflow: hidden;
+}
+.possobilities--small-margin-mobile {
+  margin-bottom: clamp(0rem, -2.238372093rem + 8.9534883721vw, 4.8125rem);
+}
+.possobilities__title {
+  margin-bottom: clamp(0rem, -2.238372093rem + 8.9534883721vw, 4.8125rem);
 }
 .possobilities__slider {
-  overflow: hidden;
   padding: 0.25rem 0.625rem;
 }
 .possobilities__slider--small-max-width {
@@ -1129,7 +1158,10 @@ button[aria-label]::before {
 }
 @media (width <= 63.99875rem) {
   .possobilities__slider {
-    padding-block: 1.4375rem;
+    padding-block: 1.25rem;
+  }
+  .possobilities__list {
+    margin-left: calc(var(--container-padding-x) * -1);
   }
 }
 /*  ===================================  */
@@ -1150,15 +1182,16 @@ button[aria-label]::before {
 .callback-form__field {
   height: 2.9375rem;
   width: 100%;
+  padding-block: 0 0.5rem;
 }
 .callback-form__field-input {
   padding: 0;
   background-color: transparent;
   border: none;
   border-bottom: var(--border-light);
-  height: inherit;
+  height: 100%;
   width: inherit;
-  padding-block: 0.75rem;
+  padding-block: 0.625rem;
   padding-inline: 0.625rem;
   transition-duration: var(--transition-duration);
 }
@@ -1179,6 +1212,10 @@ button[aria-label]::before {
 }
 .callback-form__button {
   align-self: center;
+  padding-inline: 3.3125rem;
+}
+.callback-form__button--big-padding {
+  padding-inline: 3.875rem;
 }
 
 @media (width <= 47.99875rem) {
@@ -1212,12 +1249,21 @@ button[aria-label]::before {
   text-align: center;
   margin-block: 0 0.5rem;
 }
+.callback__title--width-100 {
+  max-width: unset;
+  width: 100%;
+}
+.callback__title--rental-page {
+  margin-block: 0 1.6875rem;
+}
 .callback__form {
   max-width: 34.1875rem;
   margin-block: 0 0.5rem;
 }
 .callback__policy {
+  font-size: 1rem;
   text-align: center;
+  letter-spacing: 0.026em;
   width: 100%;
   color: var(--text-color-dark-secondary);
 }
@@ -1235,6 +1281,9 @@ button[aria-label]::before {
   width: 32.0625rem;
   height: 32rem;
   flex-shrink: 0;
+}
+.callback__image-wrapper--rental-page {
+  height: 34.5rem;
 }
 
 @media (width <= 81.31125rem) {
@@ -1273,8 +1322,14 @@ button[aria-label]::before {
     text-align: center;
     line-height: 1.5;
   }
+  .callback__title--rental-page {
+    margin-block: 0 0.625rem;
+  }
   .callback__body {
     padding-block: 3.125rem 0;
+  }
+  .callback__policy {
+    font-size: 0.9375rem;
   }
 }
 /*  ===================================  */
@@ -1289,12 +1344,16 @@ button[aria-label]::before {
   --clientsSlideHeight: 7.1875rem;
   min-height: calc(var(--clientsSlideHeight) + 0.125rem);
 }
+.our-clients__slide {
+  width: var(--clientsSlideWidth);
+  height: var(--clientsSlideHeight);
+}
 .our-clients__link {
   display: block;
   position: relative;
   overflow: hidden;
-  width: var(--clientsSlideWidth);
-  height: var(--clientsSlideHeight);
+  width: 100%;
+  height: 100%;
   outline: var(--border-extra-light);
   background-color: var(--color-light);
   border-radius: var(--border-radius-small);
