--- a/styles/pages/index-page/index.css
+++ b/styles/pages/index-page/index.css
@@ -194,7 +194,7 @@ svg * {
   --text-color-light: var(--color-gray-50);
   --text-color-dark: var(--color-gray-900);
   --text-color-dark-secondary: var(--color-gray-700);
-  --text-color-medium: var(--color-gray-600);
+  --text-color-medium: var(--color-gray-500);
   --color-accent-extra-light: var(--color-accent-50);
   --color-accent: var(--color-accent-500);
   --color-error: var(--color-red);
@@ -223,7 +223,7 @@ svg * {
   --section-margin-y-big-to-medium: clamp(3.75rem, 2.0058139535rem + 6.976744186vw, 7.5rem);
   --section-margin-y-big-to-small: clamp(2.5rem, 0.1744186047rem + 9.3023255814vw, 7.5rem);
   --button-height-small: 2.125rem;
-  --button-height: 2.625rem;
+  --button-height: 2.75rem;
   --button-height-big: 2.875rem;
   --transition-duration: 0.3s;
 }
@@ -373,8 +373,8 @@ h5,
   font-size: clamp(1.0625rem, 0.9752906977rem + 0.3488372093vw, 1.25rem);
 }
 
-h5,
-.h5 {
+h6,
+.h6 {
   font-size: clamp(0.9375rem, 0.8502906977rem + 0.3488372093vw, 1.125rem);
 }
 
@@ -530,6 +530,11 @@ button[aria-label]::before {
     padding: 0.3125rem 0.6875rem;
   }
 }
+@media (width <= 35.93625rem) {
+  .button {
+    width: 100%;
+  }
+}
 /*  ===================================  */
 /*  ===================================  */
 /* Styles for common block logo */
@@ -618,10 +623,10 @@ button[aria-label]::before {
   line-height: 1.3;
 }
 .call-up__text {
-  font-size: 1rem;
+  font-size: 0.875rem;
   line-height: 1;
   font-weight: 400;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.07em;
   text-align: center;
   color: var(--text-color-medium);
 }
@@ -650,19 +655,24 @@ button[aria-label]::before {
 }
 .header-menu__list {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   font-size: clamp(0.9375rem, 0.8502906977rem + 0.3488372093vw, 1.125rem);
   flex-wrap: wrap;
   column-gap: clamp(1rem, 0.3023255814rem + 2.7906976744vw, 2.5rem);
   row-gap: 1.0625rem;
-  padding-block: 0.96875rem;
+  padding-block: 0.84375rem;
   font-weight: 700;
   line-height: 1.3;
   text-transform: uppercase;
 }
 
-@media (max-width: 1370px) {
+@media (width <= 91.31125rem) {
+  .header-menu__list {
+    justify-content: center;
+  }
+}
+@media (width <= 85.68625rem) {
   .header-menu__list {
     max-width: 60rem;
   }
@@ -838,6 +848,9 @@ button[aria-label]::before {
   align-items: center;
   justify-content: end;
   column-gap: 3.6875rem;
+}
+.header__button {
+  letter-spacing: 0.03em;
 }
 
 @media (width > 63.99875rem) {
@@ -2157,12 +2170,16 @@ button[aria-label]::before {
   --clientsSlideHeight: 7.1875rem;
   min-height: calc(var(--clientsSlideHeight) + 0.125rem);
 }
+.our-clients__slide {
+  width: var(--clientsSlideWidth);
+  height: var(--clientsSlideHeight);
+}
 .our-clients__link {
   display: block;
   position: relative;
   overflow: hidden;
-  width: var(--clientsSlideWidth);
-  height: var(--clientsSlideHeight);
+  width: 100%;
+  height: 100%;
   outline: var(--border-extra-light);
   background-color: var(--color-light);
   border-radius: var(--border-radius-small);
