added rental-develop page. section about-gallery

--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -103,6 +103,7 @@
   --container-padding-x: #{rem(20)};
 
   --section-margin-y: #{fluid(80, 40)};
+  --section-margin-y-static: #{rem(80)};
   --section-margin-y-to-medium: #{fluid(80, 60)};
   --section-margin-y-big: #{fluid(120, 80)};
   --section-margin-y-big-to-medium: #{fluid(120, 60)};
