--- a/styles/blocks/сommon-blocks/_section.scss
+++ b/styles/blocks/сommon-blocks/_section.scss
@@ -7,6 +7,9 @@
   &--big-margin {
     margin-bottom: var(--section-margin-y-big);
   }
+  &--static-margin {
+    margin-bottom: var(--section-margin-y-static);
+  }
   &--margin-to-medium {
     margin-bottom: var(--section-margin-y-to-medium);
   }
@@ -16,6 +19,7 @@
   &--big-to-small-margin {
     margin-bottom: var(--section-margin-y-big-to-small);
   }
+
   &__title {
     margin-block: 0 fluid(50, 20);
     text-align: center;
