--- a/styles/pages/rental-develop/rental-develop.scss
+++ b/styles/pages/rental-develop/rental-develop.scss
@@ -18,5 +18,6 @@
 @use "../../blocks/callback/_callback.scss";
 @use "../../blocks/our-clients/_our-clients.scss";
 @use "../../blocks/about/_about-description.scss";
-// @use "../../blocks/advantages/_our-advantages.scss";
+@use "../../blocks/advantages/_our-advantages.scss";
+@use "../../blocks/about/_about-gallery.scss";
 @use "../../blocks/footer/_footer.scss";
