--- a/styles/blocks/advantages/_advantage-card.scss
+++ b/styles/blocks/advantages/_advantage-card.scss
@@ -1,7 +1,6 @@
 @use "../../healpers" as *;
 /* Block-card for advantage slider.Part of Section advantages*/
 .advantage-card {
-  --advantageCardTextColor: var(--color-gray-750);
   --advantageCardTitleTextColor: var(--color-gray-800);
 
   max-width: rem(297);
@@ -22,12 +21,12 @@
     font-size: rem(18);
     line-height: 1.3;
     text-transform: uppercase;
+    text-align: center;
     color: var(--advantageCardTitleTextColor);
   }
 
   &__text {
-    color: var(--advantagesCardextColor);
-    font-size: rem(16);
+    color: var(--text-color-dark-secondary);
     line-height: 1.4;
   }
 }
