--- a/styles/blocks/advantages/advantages.css
+++ b/styles/blocks/advantages/advantages.css
@@ -1,6 +1,5 @@
 /* Block-card for advantage slider.Part of Section advantages*/
 .advantage-card {
-  --advantageCardTextColor: var(--color-gray-750);
   --advantageCardTitleTextColor: var(--color-gray-800);
   max-width: 18.5625rem;
   width: 100%;
@@ -19,11 +18,11 @@
   font-size: 1.125rem;
   line-height: 1.3;
   text-transform: uppercase;
+  text-align: center;
   color: var(--advantageCardTitleTextColor);
 }
 .advantage-card__text {
-  color: var(--advantagesCardextColor);
-  font-size: 1rem;
+  color: var(--text-color-dark-secondary);
   line-height: 1.4;
 }
 
