--- a/styles/blocks/advantages/our-advantages.css
+++ b/styles/blocks/advantages/our-advantages.css
@@ -1,6 +1,5 @@
 /* Block-card for advantage slider( our-advantage ).Part of Section advantages. Differences from blocks advantages in background color and positioning of the card*/
 .advantage-card {
-  --advantageCardTextColor: var(--color-gray-700);
   --advantageCardTitleTextColor: var(--color-gray-800);
   --ourAdvantageCardBgColor: var(--color-accent-200);
   display: flex;
@@ -22,12 +21,14 @@
   font-weight: 700;
   font-size: 1.125rem;
   line-height: 1.3;
+  text-align: center;
   text-transform: uppercase;
   color: var(--advantageCardTitleTextColor);
 }
 .advantage-card__text {
-  color: var(--advantagesCardextColor);
+  color: var(--text-color-dark-secondary);
   line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 @media (width <= 47.99875rem) {
@@ -36,12 +37,16 @@
   }
   .advantage-card__heading {
     font-size: 0.9375rem;
+    line-height: 1.5;
   }
 }
 /* Section advantages.Slider(our-advantage). Differences from the advantages section, in the cards.*/
 .advantages {
   --advantagesSlidesQuantity: 4;
   overflow-x: hidden;
+}
+.advantages__title {
+  margin-bottom: 3.125rem;
 }
 .advantages__slider-wrapper {
   display: grid;
