--- a/styles/blocks/advantages/our-advantages.scss
+++ b/styles/blocks/advantages/our-advantages.scss
@@ -4,7 +4,9 @@
 .advantages {
   --advantagesSlidesQuantity: 4;
   overflow-x: hidden;
-
+  &__title {
+    margin-bottom: rem(50);
+  }
   &__slider {
     &-wrapper {
       display: grid;
