--- a/styles/pages/addresses-page/addresses.css
+++ b/styles/pages/addresses-page/addresses.css
@@ -218,6 +218,7 @@ svg * {
   --container-width-big: 120rem;
   --container-padding-x: 1.25rem;
   --section-margin-y: clamp(2.5rem, 1.3372093023rem + 4.6511627907vw, 5rem);
+  --section-margin-y-static: 5rem;
   --section-margin-y-to-medium: clamp(3.75rem, 3.1686046512rem + 2.3255813953vw, 5rem);
   --section-margin-y-big: clamp(5rem, 3.8372093023rem + 4.6511627907vw, 7.5rem);
   --section-margin-y-big-to-medium: clamp(3.75rem, 2.0058139535rem + 6.976744186vw, 7.5rem);
@@ -520,6 +521,9 @@ button[aria-label]::before {
   color: var(--color-accent);
   background-color: var(--color-light);
 }
+.button--medium-padding {
+  padding-inline: 2.15625rem;
+}
 
 @media (width <= 47.99875rem) {
   .button {
@@ -574,6 +578,9 @@ button[aria-label]::before {
 }
 .section--big-margin {
   margin-bottom: var(--section-margin-y-big);
+}
+.section--static-margin {
+  margin-bottom: var(--section-margin-y-static);
 }
 .section--margin-to-medium {
   margin-bottom: var(--section-margin-y-to-medium);
@@ -1429,7 +1436,6 @@ button[aria-label]::before {
 /*  ===================================  */
 /* Block-card for advantage slider( our-advantage ).Part of Section advantages. Differences from blocks advantages in background color and positioning of the card*/
 .advantage-card {
-  --advantageCardTextColor: var(--color-gray-700);
   --advantageCardTitleTextColor: var(--color-gray-800);
   --ourAdvantageCardBgColor: var(--color-accent-200);
   display: flex;
@@ -1451,12 +1457,14 @@ button[aria-label]::before {
   font-weight: 700;
   font-size: 1.125rem;
   line-height: 1.3;
+  text-align: center;
   text-transform: uppercase;
   color: var(--advantageCardTitleTextColor);
 }
 .advantage-card__text {
-  color: var(--advantagesCardextColor);
+  color: var(--text-color-dark-secondary);
   line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 @media (width <= 47.99875rem) {
@@ -1465,12 +1473,16 @@ button[aria-label]::before {
   }
   .advantage-card__heading {
     font-size: 0.9375rem;
+    line-height: 1.5;
   }
 }
 /* Section advantages.Slider(our-advantage). Differences from the advantages section, in the cards.*/
 .advantages {
   --advantagesSlidesQuantity: 4;
   overflow-x: hidden;
+}
+.advantages__title {
+  margin-bottom: 3.125rem;
 }
 .advantages__slider-wrapper {
   display: grid;
