--- a/styles/pages/index-page/index.css
+++ b/styles/pages/index-page/index.css
@@ -218,6 +218,7 @@ svg * {
   --container-width-big: 120rem;
   --container-padding-x: 1.25rem;
   --section-margin-y: clamp(2.5rem, 1.3372093023rem + 4.6511627907vw, 5rem);
+  --section-margin-y-static: 5rem;
   --section-margin-y-to-medium: clamp(3.75rem, 3.1686046512rem + 2.3255813953vw, 5rem);
   --section-margin-y-big: clamp(5rem, 3.8372093023rem + 4.6511627907vw, 7.5rem);
   --section-margin-y-big-to-medium: clamp(3.75rem, 2.0058139535rem + 6.976744186vw, 7.5rem);
@@ -520,6 +521,9 @@ button[aria-label]::before {
   color: var(--color-accent);
   background-color: var(--color-light);
 }
+.button--medium-padding {
+  padding-inline: 2.15625rem;
+}
 
 @media (width <= 47.99875rem) {
   .button {
@@ -574,6 +578,9 @@ button[aria-label]::before {
 }
 .section--big-margin {
   margin-bottom: var(--section-margin-y-big);
+}
+.section--static-margin {
+  margin-bottom: var(--section-margin-y-static);
 }
 .section--margin-to-medium {
   margin-bottom: var(--section-margin-y-to-medium);
@@ -2215,7 +2222,6 @@ button[aria-label]::before {
 /*  ===================================  */
 /* Block-card for advantage slider.Part of Section advantages*/
 .advantage-card {
-  --advantageCardTextColor: var(--color-gray-750);
   --advantageCardTitleTextColor: var(--color-gray-800);
   max-width: 18.5625rem;
   width: 100%;
@@ -2234,11 +2240,11 @@ button[aria-label]::before {
   font-size: 1.125rem;
   line-height: 1.3;
   text-transform: uppercase;
+  text-align: center;
   color: var(--advantageCardTitleTextColor);
 }
 .advantage-card__text {
-  color: var(--advantagesCardextColor);
-  font-size: 1rem;
+  color: var(--text-color-dark-secondary);
   line-height: 1.4;
 }
 
