--- a/styles/pages/offer/offer.css
+++ b/styles/pages/offer/offer.css
@@ -218,6 +218,7 @@ svg * {
   --container-width-big: 120rem;
   --container-padding-x: 1.25rem;
   --section-margin-y: clamp(2.5rem, 1.3372093023rem + 4.6511627907vw, 5rem);
+  --section-margin-y-static: 5rem;
   --section-margin-y-to-medium: clamp(3.75rem, 3.1686046512rem + 2.3255813953vw, 5rem);
   --section-margin-y-big: clamp(5rem, 3.8372093023rem + 4.6511627907vw, 7.5rem);
   --section-margin-y-big-to-medium: clamp(3.75rem, 2.0058139535rem + 6.976744186vw, 7.5rem);
@@ -520,6 +521,9 @@ button[aria-label]::before {
   color: var(--color-accent);
   background-color: var(--color-light);
 }
+.button--medium-padding {
+  padding-inline: 2.15625rem;
+}
 
 @media (width <= 47.99875rem) {
   .button {
@@ -574,6 +578,9 @@ button[aria-label]::before {
 }
 .section--big-margin {
   margin-bottom: var(--section-margin-y-big);
+}
+.section--static-margin {
+  margin-bottom: var(--section-margin-y-static);
 }
 .section--margin-to-medium {
   margin-bottom: var(--section-margin-y-to-medium);
