--- a/styles/pages/rental-develop/rental-develop.css
+++ b/styles/pages/rental-develop/rental-develop.css
@@ -218,6 +218,7 @@ svg * {
   --container-width-big: 120rem;
   --container-padding-x: 1.25rem;
   --section-margin-y: clamp(2.5rem, 1.3372093023rem + 4.6511627907vw, 5rem);
+  --section-margin-y-static: 5rem;
   --section-margin-y-to-medium: clamp(3.75rem, 3.1686046512rem + 2.3255813953vw, 5rem);
   --section-margin-y-big: clamp(5rem, 3.8372093023rem + 4.6511627907vw, 7.5rem);
   --section-margin-y-big-to-medium: clamp(3.75rem, 2.0058139535rem + 6.976744186vw, 7.5rem);
@@ -520,6 +521,9 @@ button[aria-label]::before {
   color: var(--color-accent);
   background-color: var(--color-light);
 }
+.button--medium-padding {
+  padding-inline: 2.15625rem;
+}
 
 @media (width <= 47.99875rem) {
   .button {
@@ -574,6 +578,9 @@ button[aria-label]::before {
 }
 .section--big-margin {
   margin-bottom: var(--section-margin-y-big);
+}
+.section--static-margin {
+  margin-bottom: var(--section-margin-y-static);
 }
 .section--margin-to-medium {
   margin-bottom: var(--section-margin-y-to-medium);
@@ -1476,7 +1483,6 @@ button[aria-label]::before {
 }
 .about-description__button {
   align-self: start;
-  padding-inline: 2.15625rem;
   font-size: 1rem !important;
 }
 
@@ -1517,6 +1523,159 @@ button[aria-label]::before {
 /*  ======================================  */
 /*  =====END section about-description====  */
 /*  ======================================  */
+/* Block-card for advantage slider( our-advantage ).Part of Section advantages. Differences from blocks advantages in background color and positioning of the card*/
+.advantage-card {
+  --advantageCardTitleTextColor: var(--color-gray-800);
+  --ourAdvantageCardBgColor: var(--color-accent-200);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 1.1875rem;
+  max-width: 18.5625rem;
+  width: 100%;
+  padding: 1.1875rem 1.25rem 1.5625rem;
+  border: var(--border-light);
+  border-radius: var(--border-radius-small);
+  background-color: var(--ourAdvantageCardBgColor);
+}
+.advantage-card__image {
+  width: 3.75rem;
+  height: 3.75rem;
+}
+.advantage-card__heading {
+  font-weight: 700;
+  font-size: 1.125rem;
+  line-height: 1.3;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--advantageCardTitleTextColor);
+}
+.advantage-card__text {
+  color: var(--text-color-dark-secondary);
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+@media (width <= 47.99875rem) {
+  .advantage-card {
+    padding: 1.25rem 1.25rem 1.125rem;
+  }
+  .advantage-card__heading {
+    font-size: 0.9375rem;
+    line-height: 1.5;
+  }
+}
+/* Section advantages.Slider(our-advantage). Differences from the advantages section, in the cards.*/
+.advantages {
+  --advantagesSlidesQuantity: 4;
+  overflow-x: hidden;
+}
+.advantages__title {
+  margin-bottom: 3.125rem;
+}
+.advantages__slider-wrapper {
+  display: grid;
+  grid-template-rows: auto !important;
+  grid-template-columns: repeat(var(--advantagesSlidesQuantity), 18.5625rem);
+  column-gap: 1.5rem;
+}
+.advantages__buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1.25rem;
+}
+.advantages__button {
+  font-size: 1rem;
+}
+
+@media (width <= 63.99875rem) {
+  .advantages__slider {
+    margin-block: 0 1.25rem;
+  }
+  .advantages__buttons {
+    column-gap: 1rem;
+    justify-content: start;
+  }
+}
+@media (width <= 47.99875rem) {
+  .advantages__slider-wrapper {
+    column-gap: 0.625rem;
+  }
+}
+/*  ===================================  */
+/*  =======END section advantages======  */
+/*  ===================================  */
+/* Styles for section about-gallery.*/
+.about-gallery {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.about-gallery__subtitle {
+  max-width: 52rem;
+  font-size: 1.125rem;
+  letter-spacing: 0.02em;
+  text-align: start;
+}
+.about-gallery__list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+  max-width: 75.1875rem;
+  margin-inline: auto;
+  margin-bottom: 3.125rem;
+}
+.about-gallery__list-item {
+  flex-shrink: 0;
+}
+.about-gallery__image {
+  width: inherit;
+  height: inherit;
+}
+.about-gallery__image-wrapper {
+  width: 23.5rem;
+  height: 18.8125rem;
+}
+.about-gallery__image-wrapper--big-width {
+  width: 25.375rem;
+}
+.about-gallery__button {
+  font-size: 1rem;
+}
+
+@media (width <= 100.06125rem) {
+  .about-gallery__list {
+    flex-wrap: wrap;
+  }
+}
+@media (width <= 63.99875rem) {
+  .about-gallery__list {
+    justify-content: center;
+  }
+}
+@media (width <= 47.99875rem) {
+  .about-gallery {
+    gap: 3.125rem;
+  }
+  .about-gallery__title {
+    margin-bottom: 0;
+  }
+  .about-gallery__subtitle {
+    margin-bottom: 0;
+  }
+  .about-gallery__list {
+    flex-direction: column;
+    margin-bottom: 0;
+  }
+  .about-gallery__image-wrapper--small-height {
+    height: 15.75rem;
+  }
+}
+/*  ==================================  */
+/*  =====END section about-gallery====  */
+/*  ==================================  */
 /* Navigation footer section. part of footer */
 .footer-svc-links__heading {
   font-size: 1rem;
